# WeKnora

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  README_CN.md  README_JA.md  README_KO.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
cli/: AGENTS.md  CHANGELOG.md  README.md  go.mod  go.sum
client/: README.md  agent_manage.go  example.go  knowledge.go  knowledgebase.go  mcp_service.go  system.go  tenant.go
config/: agent_type_presets.yaml
docker/: Dockerfile.app  Dockerfile.docreader  Dockerfile.odl-hybrid
docreader/: config.py  main.py  pyproject.toml
docreader/parser/: __init__.py  doc_parser.py  epub_parser.py  excel_convert.py  excel_parser.py  html_parser.py  markdown_parser.py  markitdown_parser.py  mhtml_parser.py  opendataloader_parser.py  pdf_parser.py  ppt_convert.py  pptx_media.py  registry.py  web_parser.py  xlsx_merge.py  xlsx_repair.py
docreader/proto/: docreader.pb.go  docreader.proto  docreader_grpc.pb.go  docreader_pb2.py  docreader_pb2.pyi  docreader_pb2_grpc.py
docreader/scripts/: parse_local.py
docreader/splitter/: header_hook.py  splitter.py
docreader/tests/: test_config.py  test_epub_parser.py  test_excel_parser.py  test_html_parser.py  test_markdown_table_util.py  test_mhtml_parser.py  test_opendataloader_parser.py  test_pdf_router.py  test_ppt_convert.py  test_web_parser.py
docs/: IM集成开发文档.md  QA.md  docs.go  embed-secure-mode.md  embed-subdomain.md  swagger.json  swagger.yaml  使用其他向量数据库.md  开发指南.md
frontend/: .dockerignore  Dockerfile  embed.html  env.d.ts  nginx.conf  package-lock.json  (+3 more)
(+784 files in other folders)
